<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeBackground"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/layout_user_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="gone"
        android:weightSum="4">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_account_circle_white_24dp" />
        <LinearLayout
            android:id="@+id/update"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bellerose"
                android:text="Name"
                android:textColor="@android:color/white"
                android:textSize="22dp" />
            <TextView
                android:id="@+id/txt_your_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bellerose"
                android:text="Normal"
                android:textColor="@android:color/white"
                android:textSize="17dp" />

        </LinearLayout>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageView_logout"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_power_settings_new_black_24dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="4">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_booking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_event_note_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/bellerose"
                        android:text="Đặt lịch"
                        android:textSize="@dimen/textCardSize" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_Cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/cart_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_content_paste_black_24dp"/>
                    <com.nex3z.notificationbadge.NotificationBadge
                        android:id="@+id/notification_badge"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="-20dp"
                        android:layout_toRightOf="@+id/txt_cart_title"
                        app:nbMaxTextLength="2" />
                    <TextView
                        android:id="@+id/txt_cart_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cart_icon"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/bellerose"
                        android:text="Dịch vụ"
                        android:textSize="@dimen/textCardSize" />



                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_histoy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                   android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_history_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/bellerose"
                        android:text="Lịch sử"
                        android:textSize="@dimen/textCardSize" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_notifications_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/bellerose"
                        android:text="Thông báo"
                        android:textSize="@dimen/textCardSize" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_booking_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_event_note_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/bellerose"
                        android:text="@string/your_booking_information"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_bullet" />
                    <TextView
                        android:id="@+id/txt_salon_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Address Salon"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_bullet" />
                    <TextView
                        android:id="@+id/txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stylist_bullet" />
                    <TextView
                        android:id="@+id/txt_salon_barber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quyen Nguyen"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bullet" />
                    <TextView
                        android:id="@+id/txt_time_remain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Button
                        android:id="@+id/btn_change_booking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_border_bg"
                        android:text="change" />
                    <Button
                        android:id="@+id/btn_delete_booking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_border_bg"
                        android:text="delete" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <ss.com.bannerslider.Slider
        android:id="@+id/banner_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/bellerose"
                android:text="look book"
                android:textColor="@color/colorButton"
                android:textSize="18dp" />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_look_book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" />
        <!--        <include layout="@layout/activity_content_main" />-->
    </LinearLayout>



</LinearLayout>







